--- a/index.html
+++ b/index.html
@@ -3,33 +3,32 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-
+<link rel="stylesheet" href="style.css">
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   
   <title>Frontend Mentor | Profile card component</title>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
 </head>
 <body>
-  Victor Crest
-  26
-  London
-
-  80K
-  Followers
-
-  803K
-  Likes
-
-  1.4K
-  Photos
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+  <div class="container">
+    <div class="card">
+     <div class="top-card">
+      <img src="./images/bg-pattern-card.svg" alt="top background for card" id="top-img">
+     </div>
+     <div class="pic">
+      <img src="./images/image-victor.jpg" alt="" class="profile-pic">
+     </div>
+     <div class="middle-card">
+      <h2>Victor Crest <span class="age">26</span></h2>
+      <h5>London</h5>
+     </div>
+     <hr class="line">
+     <div class="bottom-subcard">
+       <div class="bottom-left"></div>
+       <div class="bottom-mid"></div>
+       <div class="bottom-right"></div>
+    </div>
+    </div>
   </div>
 </body>
 </html>
