--- a/index.html
+++ b/index.html
@@ -10,13 +10,20 @@
 
 </head>
 <body>
+<body>
+  <div class="left">
+    <img src="./images/bg-pattern-top.svg" alt="">
+  </div>
+  <div class="right">
+    <img src="./images/bg-pattern-bottom.svg" alt="">
+  </div>
   <div class="container">
     <div class="card">
      <div class="top-card">
       <img src="./images/bg-pattern-card.svg" alt="top background for card" id="top-img">
      </div>
      <div class="pic">
-      <img src="./images/image-victor.jpg" alt="" class="profile-pic">
+      <img src="./images/image-victor.jpg" alt="Profile Picture" class="profile-pic">
      </div>
      <div class="middle-card">
       <h2>Victor Crest <span class="age">26</span></h2>
@@ -24,9 +31,18 @@
      </div>
      <hr class="line">
      <div class="bottom-subcard">
-       <div class="bottom-left"></div>
-       <div class="bottom-mid"></div>
-       <div class="bottom-right"></div>
+       <div class="bottom-left">
+        <h1>80K</h1>
+        <h3>Followers</h3>
+      </div>
+       <div class="bottom-mid">
+        <h1>803K</h1>
+        <h3>Likes</h3>
+       </div>
+       <div class="bottom-right">
+        <h1>1.4K</h1>
+        <h3>Photos</h3>
+       </div>
     </div>
     </div>
   </div>
